#9510: fix testers reviews ** description: - fix css issue of white space below dropdown lists if user selects one item from them in rules manager page - fix issue in filtering roles dropdown

--- a/web/client/themes/default/less/autocomplete.less
+++ b/web/client/themes/default/less/autocomplete.less
@@ -38,6 +38,8 @@
 .rw-combobox .rw-btn {
     overflow: hidden;
 }
-.d-flex{
+/* .autocompleteField.d-flex is used in rule-manager page when checkbox is added beside compobox to fix white spaece below list if an item is selected*/
+.autocompleteField.d-flex{
     display: flex;
+    height: 100%;
 }
